Ensure git and rpm-build are installed
Signed-off-by: Chenxiong Qi <qcxhome@gmail.com>

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,6 +1,6 @@
 .PHONY: srpm
 srpm:
-	@dnf install python3-pip
+	@dnf install -y python3-pip git rpm-build
 	@python3 -m pip download --no-deps -d . nitrate-tcms
 	@git clone https://github.com/Nitrate/Nitrate.git
 	@rpmbuild -bs \
