Build from latest tag
This is useful to build package from whatever the branch including the
release branch.

Signed-off-by: Chenxiong Qi <cqi@redhat.com>

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,10 +1,4 @@
 .PHONY: srpm
 srpm:
 	@dnf install -y python3-pip git rpm-build python3-setuptools
-	@python3 -m pip download --no-deps -d . nitrate-tcms
-	@git clone https://github.com/Nitrate/Nitrate.git
-	@rpmbuild -bs \
-		--define '_srcrpmdir $(outdir)' \
-		--define '_specdir $(PWD)/Nitrate' \
-		--define '_sourcedir $(PWD)' \
-		Nitrate/python-nitrate-tcms.spec
+	@sh -ex build-srpm.sh "$(outdir)"
