--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,4 +1,4 @@
 .PHONY: srpm
 srpm:
 	@dnf install -y python3-pip git rpm-build python3-setuptools
-	@sh -ex build-srpm.sh "$(outdir)"
+	@sh -ex $(spec)/build-srpm.sh "$(outdir)"
